--- a/chatRoom/public/index.html
+++ b/chatRoom/public/index.html
@@ -15,9 +15,7 @@
 		<h1 class="title"></h1>
 		<div class="main">
 			<ul class="speakPane"></ul>
-			<ul class="userlist list-group">
-				<li class="list-group-item-info first">共<span id="onlinecount"></span>位在线用户</li>
-			</ul>
+			<ul class="userlist list-group"></ul>
 		</div>
 		<div class="bottom form-inline">
 			<input type="button" name="emoji" id="emoji" class="form-control col-sm-2" value="emoji">
@@ -36,6 +34,7 @@
 	
 	<div class="emoji"></div>
 	<script type="text/html" id="userlist">
+		<li class="list-group-item-info first">共<span id="onlinecount"></span>位在线用户</li>
 		{{#.}}
 			<li class="list-group-item">{{nickname}}</li>
 		{{/.}}
